updated strings for counter

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
             return (
                 <div className="counter">
-                    Active Cells: {activeCount}
+                    Count: {activeCount}
                 </div>
             );
         };
